- Add an implementation of modified Lamport distributed mutex
